# Hedsql-tests

./: Hedsql-SQLiteSimple.cabal  Hedsql-tests.cabal  README.md
src/: Main.hs
src/Database/Hedsql/Connection/SqLite/: Simple.hs
src/Database/Hedsql/Examples/: Create.hs  Delete.hs  Drop.hs  Insert.hs  Select.hs  Update.hs
src/Database/Hedsql/Tests/: Delete.hs  Insert.hs  PrettyPrint.hs  Queries.hs  TableManipulations.hs  Update.hs
src/Database/Hedsql/Tests/Connection/: SqLiteSimple.hs
tests/: Tests.hs
tests/Database/SQLite/Simple/: HedsqlTest.hs
tests/Statements/: Create.hs
